Add cellery macOS installer build scripts

--- a/installers/macOS-x64/darwin/Resources/conclusion.html
+++ b/installers/macOS-x64/darwin/Resources/conclusion.html
@@ -6,34 +6,33 @@
     </head>
     <body>
         <div style="font-family: Helvetica; padding-left: 10px;" align="left">
-            <h3>WSO2 API Manager __PRODUCT_VERSION__</h3>
-                <p>Thank you for installing WSO2 API Manager.</p>
-            <h4>Run the Product</h4>
-                <p style="font-size: 12px;">This product was installed at "/Library/WSO2/APIManager/__PRODUCT_VERSION__/"</p>
-                <p>Open a new terminal and run the following command(s) to start WSO2 API Manager __PRODUCT_VERSION__ on your computer.</p>
-                <ul>
-                    <li>Run API Manager <code style="color: #747777; font-size: 12px;"><br />&nbsp; $ wso2am-__PRODUCT_VERSION__</code></li>
-                </ul>
-                
+            <h3>Cellery</h3>
+                <p style="color: #020202; font-size: 11px;">Thank you for installing Cellery.</p>
+            <h5>Run Cellery</h5>
+                <p style="color: #020202; font-size: 11px;">Open a new terminal and run the following command to get start with Cellery:</p>
+                <code style="color: #c6a72b; font-size: 11px;">&nbsp; $ <span style="color: #abb0b0">cellery [command]</span></code>
+                <br/><br/>
+                <p style="color: #020202; font-size: 11px;">Run the following command for Cellery help:</p>
+                <code style="color: #c6a72b; font-size: 11px;">&nbsp; $ <span style="color: #abb0b0">cellery -h</span></code>
         </div>
         <div style="font-family: Helvetica; padding-left: 10px;" align="left">
             <br/>
-            <h4>Resources</h4>
-                <p>Go through following links for additional information.</p>
+            <h5>Resources</h5>
+                <p style="color: #020202; font-size: 11px;">Go through following links for additional information.</p>
                 <ul>
-                    <li><a href="https://docs.wso2.com/api-manager/Quick+Start+Guide">Quick Start Guide</a></li>
-                    <li><a href="https://docs.wso2.com/api-manager/">Documentation</a></li>
+                    <li><a href="https://docs.wso2.com/api-manager/Quick+Start+Guide" style="font-size: 11px;">Quick Start Guide</a></li>
+                    <li><a href="https://docs.wso2.com/api-manager/" style="font-size: 11px;">Documentation</a></li>
                 </ul>
         </div>
         <div style="font-family: Helvetica; padding-left: 10px;" align="left">
             <br/>
-            <h4>Uninstall the Product</h4>
-                <p>Run the following command to uninstall WSO2 API Manager __PRODUCT_VERSION__ from your computer. <br /> <code style="color: #747777; font-size: 12px;"><br />&nbsp; $ sudo bash /Library/WSO2/APIManager/__PRODUCT_VERSION__/uninstall.sh</code>
+            <h5>Uninstall Cellery</h5>
+                <p style="color: #020202; font-size: 11px;">Run the following command to uninstall Cellery. <br />
+                  <code style="color: #c6a72b; font-size: 11px;"><br />&nbsp; $ <span style="color: #abb0b0">sudo bash /Library/Cellery/uninstall.sh</span></code>
                 </p>
         </div>
         <div style="font-family: Helvetica; padding-left: 10px;" align="left"><br />
-            <p style="color: #abb0b0; font-size: 10px;">Copyright 2018 WSO2 Inc. All rights reserved. API Manager and its use subject to a license agreement and are also subject to copyright, trademark patent and/or other laws.</p>
+            <p style="color: #abb0b0; font-size: 10px;">Copyright © 2019 WSO2 Inc. All rights reserved. Cellery and its use subject to a license agreement and are also subject to copyright, trademark patent and/or other laws.</p>
         </div>
     </body>
 </html>
- 
