--- a/installers/macOS-x64/darwin/Resources/welcome.html
+++ b/installers/macOS-x64/darwin/Resources/welcome.html
@@ -6,9 +6,9 @@
 <body>
     <div align="left" style="font-family: Helvetica; padding-left: 10px;">
     	<br/>
-        <p>This will install WSO2 API Manager __PRODUCT_VERSION__ on your computer. The wizard will lead you step by step through the installation.</p>
+        <p style="color: #020202; font-size: 12px;">This will install <span style="color: #46b9d6; font-size: 12px;">Cellery __VERSION__</span> on your computer. You will be guided through the steps necessary to install this software.</p>
         <br/>
-        <p style="color: #747777">Click “Continue" to continue the Setup.</p>
+        <p style="color: #abb0b0; font-size: 12px;">Click <span style="color: #626666">“Continue"</span> to continue the setup</p>
     </div>
 </body>
 </html>
